# PyMCS

./: .gitignore  CMakeLists.txt  MCS_3.0.28_Linux.tgz  README.md  pyproject.toml  setup.py  vcpkg.json
.github/workflows/: main.yaml
include/: channel.hpp  exceptions.hpp  system.hpp
src/: system.cpp  wrap.cpp
src/PyMCS/: PyMCS.cpp  __init__.py
